# directed-graph-3D

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Hypergraph.cpp  Hypergraph.h  Main.cpp  MainOld.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  build.bat  build.sh  dependencies.txt  main  vertex_shader.glsl
.github/workflows/: build.yml
glad/include/glad/: gl.h
packaging/macos/: Info.plist  launcher.sh
shaders/: vertex_shader.glsl
src/: Camera.cpp  Camera.h  ForceLayout.cpp  ForceLayout.h  GraphIO.cpp  GraphIO.h  Hypergraph.cpp  Hypergraph.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  RuleEngine.cpp  RuleEngine.h  Shader.cpp  Shader.h  Shaders_embedded.h
